--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ EMAIL_PORT=507
 EMAIL_HOST=smtp.gmail.com
 EMAIL_USERNAME=edwardteixeiradias@gmail.com
 EMAIL_PASSWORD=cdb2eegundam00
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
