--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "pm2": "^4.2.0",
     "pug": "^2.0.4",
     "uuid": "7.0.3",
+    "vercel": "^21.1.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
